Fixed line breaks in notification popup

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -200,12 +200,13 @@ toolbar[mode="full"] #abp-toolbarbutton[type="menu"]
 
 #abp-notification
 {
-  max-width: 300px;
+  width: 300px;
 }
 
 #abp-notification-question
 {
   display: none;
+  white-space: nowrap;
 }
 
 .abp-question #abp-notification-question
